--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
         body{
             /* background-color: #1A1A1A; */
             font-size: 15px;
-            font-family: 'Noto Sans JP', sans-serif;
+            font-family: 'Poppins', sans-serif;
             font-weight: 300;
             margin: 0;
         }
@@ -59,7 +59,7 @@
         .titlecaption{
             color: white;
             position: relative;
-            font-family:'Noto Sans JP', sans-serif;
+            font-family: 'Klee One', cursive;
             font-size: max(2vw,21px);
             border-top: white solid 1px;
             left: 50%;
@@ -120,6 +120,7 @@
             width:15vw;
             min-width: 150px;
             cursor: pointer;
+            margin-top:5vh;
         }
 
 .video{
