--- a/style.css
+++ b/style.css
@@ -41,19 +41,25 @@
             left: 50%;
             top: 50vh;
             transform: translate(-50%,-50%);
+            z-index: 9000;
+            opacity: 0;
+            transition: opacity 3s ease;
         }
         .bg_dot{
             /* display: none; */
             height: 100vh; 
             width: 100vw;
-            z-index: 999;
+            z-index: 9001;
             background-color: rgba(0, 0, 0, 0); 
             background-image:
                 radial-gradient(rgba(0, 0, 0, 1)0%, rgba(0,0,0,0) 300%);
+            /* background-image:
+                radial-gradient(rgba(0, 0, 0, 1) 300%, rgba(0,0,0,0) 0%); */
             background-size: max(2px,.3vmax) max(2px,.3vmax);
             position: absolute;
              top: 0;
             left: 0; 
+            /* transition: background-image ease; */
             
         }
         .titlecaption{
@@ -85,6 +91,7 @@
             width: 100%;
             margin: 0;
             left: 0;
+            /* opacity: 0; */
             object-fit: cover;
         }
         .title{
@@ -119,7 +126,7 @@
         .watch{
             width:15vw;
             min-width: 150px;
-            cursor: pointer;
+            margin-top:5vh;
         }
         .titleimagewrapper{
             position: relative;
@@ -376,12 +383,64 @@
     width: 25vw;
     margin: 0 0;
 }
+
+.desc-title{
+    position:fixed;
+    left: 4vw;
+    top: 15vh;
+    font-size: min(max(7vw,30px),40px);
+    margin: 0;
+    font-family: 'Klee One', cursive;
+    opacity: inherit;
+    transition: top ease-in-out .5s;
+
+}
+.desc-wrapper{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 1; 
+}
+.desc-text{
+    position: fixed;
+    width: 40vw;
+    min-width: 300px;
+    right: 4vw;
+    top: 60vh;
+    opacity: 0;
+    transition: opacity ease .3s;
+    font-size: max(20px,1.3vw);
+}
+.hider{
+    position:fixed;
+    width: 100vw;
+    height: 20vh;
+    top: 15vh;
+    font-size: 3rem;
+    margin: 0;
+    font-family: 'Klee One', cursive;
+    z-index: 8999;
+    opacity: 1;
+    background-color: white;
+    color: transparent;
+}
+.content{
+    height:600vh;
+}
+@media screen and ( max-width: 767px){
+    .desc-text{
+        left: 50vw;
+        transform: translate(-50%,0%);
+    }
+}
 @media screen and ( max-width: 767px){
 
 
     body{
         font-size: 7.5px;
-        font-family: 'Noto Sans JP', sans-serif;
+        font-family: 'Klee One', cursive;
         margin: 0;
     }
     .probox{
